--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ background-position: right;
 H3{
     color: #ffffff;
     font-family:  'Rubik', sans-serif;
-
+}
 #camara {
     display: inline-block;
     position: relative;
