--- a/css/style.css
+++ b/css/style.css
@@ -35,11 +35,11 @@ H3{
     border: solid 2px white;
     background-color: rgba(255, 0, 0, 0.651);
     position: absolute;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
     bottom: 0px;
-    margin-bottom: 176px;
+    margin-bottom: 3px;
     margin-left: 13em;
 }
 #canvas{
@@ -52,5 +52,9 @@ H3{
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
     padding: 0;
+
+}
+#contendorResidentes{
+    display: -webkit-box;
 
 }
