estilos registro if

--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,12 @@ H3{
     display: -webkit-box;
 
 }
+.fa-home{
+    color: #FFFFFF;
+}
+.btn-orange{
+    background-color: #F96C28;
+}
+.formularioResidentes{
+    margin-top: 5%;
+}
